--- a/.github/workflows/update_complex_feed.yml
+++ b/.github/workflows/update_complex_feed.yml
@@ -65,5 +65,5 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add feeds/*
-          git commit -m "Update KrebsOnSecurity feed to JSON" || exit 0
+          git commit -m "Update complex feed to JSON" || exit 0
           git push
