--- a/.github/workflows/merge-json-files.yml
+++ b/.github/workflows/merge-json-files.yml
@@ -1,4 +1,3 @@
-
 name: Merge JSON Files
 
 on:
@@ -28,6 +27,8 @@ jobs:
       run: node merge-json.js
 
     - name: Commit and push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
