--- a/.github/workflows/merge-json-files.yml
+++ b/.github/workflows/merge-json-files.yml
@@ -30,6 +30,6 @@ jobs:
       run: |
         git config --global user.name 'github-actions[bot]'
         git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-        git add .
+        git add feeds/*
         git commit -m 'Daily merge of JSON files'
         git push
