shifter updaters to manual

--- a/.github/workflows/update_complex_feed.yml
+++ b/.github/workflows/update_complex_feed.yml
@@ -1,8 +1,8 @@
 name: Update Complex RSS Feeds
 
 on:
-  schedule:
-    - cron: '0 * * * *'  # Runs hourly
+#  schedule:
+#    - cron: '0 * * * *'  # Runs hourly
   workflow_dispatch:
 
 permissions:
