--- a/.github/workflows/update_simple_feed.yml
+++ b/.github/workflows/update_simple_feed.yml
@@ -1,8 +1,8 @@
 name: Update Simple RSS Feeds
 
 on:
-  schedule:
-    - cron: '0 * * * *'  # Runs hourly at the top of the hour
+#  schedule:
+#    - cron: '0 * * * *'  # Runs hourly at the top of the hour
   workflow_dispatch:
 
 permissions:
