--- a/.github/workflows/update_feeds.yml
+++ b/.github/workflows/update_feeds.yml
@@ -22,6 +22,7 @@ jobs:
           curl -L https://www.bleepingcomputer.com/feed/ -o feeds/bpc.xml
           curl -L https://feeds.feedburner.com/TheHackersNews -o feeds/thn.xml
           curl -L https://krebsonsecurity.com/feed/ -o feeds/kbs.xml
+          curl -L https://www.recordedfuture.com/feed -o rf.xml
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -40,7 +41,8 @@ jobs:
           const feeds = [
             { xml: 'feeds/bpc.xml', json: 'feeds/bpc.json', tag: 'news' },
             { xml: 'feeds/thn.xml', json: 'feeds/thn.json', tag: 'news' },
-            { xml: 'feeds/kbs.xml', json: 'feeds/kbs.json', tag: 'news' }
+            { xml: 'feeds/kbs.xml', json: 'feeds/kbs.json', tag: 'news' },
+            { xml: 'feeds/rf.xml', json: 'feeds/rf.json', tag: 'intel' }
           ];
           (async () => {
             for (const feed of feeds) {
