--- a/.github/workflows/merge-json.yml
+++ b/.github/workflows/merge-json.yml
@@ -1,12 +1,12 @@
-name: Merge JSON Files
+name: Python Merge JSON Files
 
 on:
-  # schedule:
-  #   - cron: '0 0 * * *'  # Runs daily
+  schedule:
+    - cron: '0 0 * * *'  # Runs daily
   workflow_dispatch:
 
 permissions:
-      contents: write
+  contents: write
 
 jobs:
   merge-json:
@@ -16,21 +16,23 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
+    - name: Set up Python
+      uses: actions/setup-python@v4
       with:
-        node-version: '14'
+        python-version: '3.9'
 
     - name: Install dependencies
-      run: npm install
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
     - name: Merge JSON files
-      run: node merge-json.js
+      run: python merge-json.py
 
     - name: Commit and push changes
       run: |
         git config --local user.name "github-actions[bot]"
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git add feeds/*
-        git commit -m 'Daily merge of JSON files'
+        git commit -m 'Daily merge of JSON files with source tagging'
         git push
