--- a/.github/workflows/cons_update_feeds.yml
+++ b/.github/workflows/cons_update_feeds.yml
@@ -80,5 +80,5 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add feeds/*
-          git commit -m "Update feeds to JSON" || exit 0
+          git commit -m "JS update feeds to JSON" || exit 0
           git push
