cleanup python scripts

--- a/.github/workflows/update_gpz_feed.yml
+++ b/.github/workflows/update_gpz_feed.yml
@@ -2,8 +2,8 @@ name: Python Update GPZ Feeds
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # Runs daily
-  workflow_dispatch:  # Allows manual trigger
+    - cron: '0 0 * * *'  
+  workflow_dispatch:  
 
 permissions:
   contents: write
@@ -13,27 +13,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Check out the repository
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      # Step 2: Set up Python environment
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
 
-      # Step 3: Install dependencies
       - name: Install Dependencies
         run: |
           pip install feedparser beautifulsoup4
 
-      # Step 4: Run the feed update script
       - name: Run Feed Update Script
         run: |
           python scripts/update_gpz_feed.py
 
-      # Step 5: Commit and push changes
       - name: Commit and Push Changes
         run: |
           git config --local user.name "github-actions[bot]"
