--- a/.github/workflows/merge-json.yml
+++ b/.github/workflows/merge-json.yml
@@ -21,10 +21,9 @@ jobs:
       with:
         python-version: '3.9'
 
-    - name: Install dependencies
+    - name: Install Dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install os json pathlib
 
     - name: Merge JSON files
       run: python merge-json.py
