--- a/.github/workflows/update_gpz_feed.yml
+++ b/.github/workflows/update_gpz_feed.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git add gpz.json
+          git add feeds/gpz.json
           git commit -m "Py Update feeds to GPZ JSON" || exit 0
           git push
