--- a/.github/workflows/update_gsr_feed.yml
+++ b/.github/workflows/update_gsr_feed.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          pip install feedparser beautifulsoup4
+          pip install requests beautifulsoup4
 
       - name: Run Feed Update Script
         run: |
@@ -34,5 +34,5 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git add feeds/gsr.json
-          git commit -m "Py Update feeds to GPZ JSON" || exit 0
+          git commit -m "Py Update feeds to GSR JSON" || exit 0
           git push
