--- a/.github/workflows/cons_update_feeds.yml
+++ b/.github/workflows/cons_update_feeds.yml
@@ -22,6 +22,7 @@ jobs:
           curl -L https://feeds.feedburner.com/TheHackersNews -o feeds/thn.xml
           curl -L https://krebsonsecurity.com/feed/ -o feeds/kbs.xml
           curl -L https://www.recordedfuture.com/feed/ -o feeds/rf.xml
+          curl -L https://www.sentinelone.com/labs/feed/ -o feeds/sn1.xml
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -41,6 +42,7 @@ jobs:
             { xml: 'feeds/bpc.xml', json: 'feeds/bpc.json', tag: 'news' },
             { xml: 'feeds/thn.xml', json: 'feeds/thn.json', tag: 'news' },
             { xml: 'feeds/kbs.xml', json: 'feeds/kbs.json', tag: 'news' },
+            { xml: 'feeds/sn1.xml', json: 'feeds/sn1.json', tag: 'intel' },
             { xml: 'feeds/rf.xml', json: 'feeds/rf.json', tag: 'intel' }
           ];
           (async () => {
