--- a/.github/workflows/dependency-review.yml
+++ b/.github/workflows/dependency-review.yml
@@ -11,6 +11,8 @@ name: 'Dependency review'
 on:
   pull_request:
     branches: [ "main" ]
+  
+  workflow_dispatch:
 
 # If using a dependency submission action in this workflow this permission will need to be set to:
 #
